# wattanit-collections-manager

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  requirements.md
src/: baserow.rs  book_search.rs  config.rs  google_books.rs  label.rs  llm.rs  main.rs  open_library.rs  web_search.rs
