[package]
name = "wcm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
image = "0.24"
config = "0.14"
serde_yaml = "0.9"
dotenvy = "0.15"
urlencoding = "2.1"
dialoguer = "0.11"
async-trait = "0.1"
